fixed link z-index issue

--- a/static/less/module-sickbeard.less
+++ b/static/less/module-sickbeard.less
@@ -42,6 +42,7 @@
       background: rgb(0, 0, 0); /* fallback color */
       background: rgba(0, 0, 0, 0.5);
       padding: 5px 5px 5px 15px;
+      z-index: 1;
 
       a:hover {
         background: rgba(0, 0, 0, 0.2);
@@ -57,6 +58,7 @@
       background: rgb(0, 0, 0); /* fallback color */
       background: rgba(0, 0, 0, 0.5);
       padding: 5px;
+      z-index: 1;
 
       img {
         cursor: pointer;
